Add 1.0.x branch